<?xml version="1.0" encoding="utf-8"?>
    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBackground">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:id="@+id/textView1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:text="@string/MainMenuListFiller1"
                android:textColor="@color/Textcolor1"/>

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:text="@string/MainMenuListFiller2"
                android:textColor="@color/Textcolor1"/>

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:text="@string/MainMenuListFiller3"
                android:textColor="@color/Textcolor2"/>
            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:text="@string/MainMenuListFiller4"
                android:textColor="@color/Textcolor1"/>


        </LinearLayout>

    </ScrollView>
